--- a/test_easy.Rmd
+++ b/test_easy.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "test_easy_markdown"
 author: "Haris Zafeiropoulos"
-date: "3/15/2020"
+date: '`r Sys.Date()`'
 output:
   html_document: 
     keep_md: yes
