--- a/test_easy.Rmd
+++ b/test_easy.Rmd
@@ -15,11 +15,9 @@ options(tinytex.verbose = TRUE)
 
 ```
 
-## R Markdown
+## Compile and run VolEsti. Use the R extension to visualize sampling in a polytope.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Here are the libraries needed
 
 ```{r libraries}
 options(tinytex.verbose = TRUE)
