updated version of easy task

--- a/test_easy.Rmd
+++ b/test_easy.Rmd
@@ -48,8 +48,6 @@ points_baw =  sample_points(P = polytope, n = 5000, distribution = list("density
 ```
 
 
-
-
 ### keep sample points 
 
 ```{r sample points}
@@ -62,16 +60,11 @@ RDHR = data.frame(x=points_rdhr[1,], y=points_rdhr[2,])
 ```
 
 
-
-
 ### bind all the points in a dataframe
 ```{r bind}
 options(tinytex.verbose = TRUE)
 walks = rbind(BaW,BiW,CDHR,RDHR)
 ```
-
-
-
 
 
 ### add a column in the dataframe to tag the points of each algorithm
@@ -81,11 +74,82 @@ walks$random_walk = c(rep("BaW",5000),rep("BiW",5000),rep("CDHR",5000),rep("RDHR
 
 
 
-
-
 ### plot it 
 ```{r plot}
 ggplot(walks, aes(x=x, y=y, group=random_walk,col=random_walk)) + 
   geom_point() + geom_smooth() + labs(title = "uniform sampling on cross_10.ine file / H-polytope")
 ```
 
+
+
+
+### more sampling, more plots
+
+```{r more_sampling_1}
+P = gen_cube(2, 'H')
+p=sample_points(P, n=2000, random_walk = list("walk" = "BiW", "walk_length" = 1))
+r = t(p)
+q = as.data.frame(r)
+
+```
+
+
+```{r more_plots_1}
+
+names(q)[1]='x'
+names(q)[2]='y'
+ggplot(q, aes(x=x,y=y)) +
+       geom_point() + geom_smooth()
+
+
+```
+
+
+### Get sample points from the inside of polytope.
+```{r more_sampling_2}
+P = gen_rand_hpoly(2,17, seed=1917)
+p=sample_points(P, n=2000, random_walk = list("walk" = "RDHR", "walk_length" = 1))
+r = t(p)
+q1 = as.data.frame(r)
+
+```
+
+
+```{r more_plots_2}
+names(q1)[1]='x'
+names(q1)[2]='y'
+ggplot(q1, aes(x=x,y=y)) +
+       geom_point() + geom_smooth()
+
+```
+
+
+
+### Get boundary points from the same polytope.
+```{r more_sampling_3}
+p=sample_points(P, n=2000, random_walk = list("walk" = "BRDHR", "walk_length" = 1))
+r = t(p)
+q2 = as.data.frame(r)
+
+```
+
+
+```{r more_plots_3}
+
+names(q2)[1]='x'
+names(q2)[2]='y'
+ggplot(q2, aes(x=x,y=y)) +
+       geom_point() + geom_smooth()
+
+```
+
+
+### and together..
+```{r final_plot}
+
+final_points=rbind(q1,q2)
+final_points$random_walk = c(rep("RDHR",2000), rep("BRDHR",2000))
+
+ggplot(final_points, aes(x=x, y=y, group=random_walk,col=random_walk)) + 
+  geom_point() + geom_smooth() + labs(title = "in and out random walks")
+```
