--- a/test_easy.Rmd
+++ b/test_easy.Rmd
@@ -77,7 +77,7 @@ walks$random_walk = c(rep("BaW",5000),rep("BiW",5000),rep("CDHR",5000),rep("RDHR
 ### plot it 
 ```{r plot}
 ggplot(walks, aes(x=x, y=y, group=random_walk,col=random_walk)) + 
-  geom_point() + geom_smooth() + labs(title = "uniform sampling on cross_10.ine file / H-polytope")
+  geom_point() + labs(title = "uniform sampling on cross_10.ine file / H-polytope")
 ```
 
 
@@ -99,7 +99,7 @@ q = as.data.frame(r)
 names(q)[1]='x'
 names(q)[2]='y'
 ggplot(q, aes(x=x,y=y)) +
-       geom_point() + geom_smooth()
+       geom_point() 
 
 
 ```
@@ -119,7 +119,7 @@ q1 = as.data.frame(r)
 names(q1)[1]='x'
 names(q1)[2]='y'
 ggplot(q1, aes(x=x,y=y)) +
-       geom_point() + geom_smooth()
+       geom_point() 
 
 ```
 
@@ -139,7 +139,7 @@ q2 = as.data.frame(r)
 names(q2)[1]='x'
 names(q2)[2]='y'
 ggplot(q2, aes(x=x,y=y)) +
-       geom_point() + geom_smooth()
+       geom_point() 
 
 ```
 
@@ -151,5 +151,5 @@ final_points=rbind(q1,q2)
 final_points$random_walk = c(rep("RDHR",2000), rep("BRDHR",2000))
 
 ggplot(final_points, aes(x=x, y=y, group=random_walk,col=random_walk)) + 
-  geom_point() + geom_smooth() + labs(title = "in and out random walks")
+  geom_point() + labs(title = "in and out random walks")
 ```
