1st attempt for the hard task

--- a/test_hard.Rmd
+++ b/test_hard.Rmd
@@ -10,27 +10,67 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
+options(tinytex.verbose = TRUE)
 ```
 
 ## Support lower dimensional polytopes in volesti and use existing methods to sample from them
 
 
-
-APO TOLI
-gia hard skeftomoun na kaneis ta e3hs: 
-a) install to cobratoolbox sto matlab, 
-b) na pareis to rounded polytope (full dimensional) apo to matlab kai 
-c) na kanei sampling me to volesti sthn R kai histograms
-
-
-
 Here are the libraries needed
 
 ```{r libraries, include=TRUE}
-
 library(ggplot2)
-
+library(R.matlab)
+library(volesti)
 ```
+
+### Get the rounded polytope file (.mat) and read it 
+```{r get_the_data_again, include=TRUE}
+rounded_polytope_file = "/home/haris/Desktop/gsoc2020/gsoc2020/roundedPolytope.mat"
+rounded_polytope = readMat(rounded_polytope_file)
+rounded_polytope = rounded_polytope$poly
+```
+
+### We keen all the variables needed in order to move from the rounded polytope back to the initial as well as from the low back to full dimension.
+```{r keep_variables, include=TRUE}
+A_init = rounded_polytope[1]
+A_init = A_init[[1]]
+A = A_init[[1]]
+
+b_init = rounded_polytope[2]
+b_init = b_init[[1]]
+b = b_init[[1]]
+
+G_init = rounded_polytope[5]
+G_init = G_init[[1]]
+G = G_init[[1]]
+
+shift_init = rounded_polytope[6]
+shift_init = shift_init[[1]]
+shift = shift_init[[1]]
+```
+
+And now we have A and b defining our initial polytope (before the transformations occured in the Matlab step), N for getting fron n-m dimensions back to n and shift a variable that allows us to move our polytope. 
+### Now we need to sample from our rounded, low dimension polytope
+```{r sampling, include=TRUE}
+N = 2000
+full_dim_polytope = Hpolytope$new(A=A, b=b)
+points = sample_points(full_dim_polytope, n=N, random_walk = list("walk" = "BiW", "walk_length" = 1))
+dim(points)
+```
+
+
+### Now we need to map our sampling points, back to the full dimension polytope
+```{r mapping, include=TRUE}
+maped_points = G%*%points + matrix(rep(shift,N), ncol = N)
+dim(maped_points)
+```
+
+
+
+
+
+
 
 
